kustomize/pangolin-newt/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: newt-technat
  labels:
    app.kubernetes.io/name: newt-technat
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: newt-technat
  serviceName: newt-technat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: newt-technat
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: newt
        image: fosrl/newt:1.1.2
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
  updateStrategy:
    type: RollingUpdate
