kustomize/pangolin-newt/networkpolicy-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: newt-technat-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: newt-technat
  egress:
    - toFQDNs:
        - matchName: pangolin.technat.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
